--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "dependencies": {
+    "mongodb": "^4.6.0",
     "papaparse": "^5.3.2",
     "xlsx": "^0.18.4"
   },
   "devDependencies": {
-    "node-xlsx": "^0.21.0"
+    "cypress": "^10.0.3",
+    "node-xlsx": "^0.21.0",
+    "react": "^18.1.0",
+    "webpack": "^5.73.0"
   },
   "type": {
     "module": "commonjs"
